[gd_scene load_steps=5 format=3 uid="uid://dmxtjp41r8qy2"]

[ext_resource type="Texture2D" uid="uid://iflfgmhn2fc2" path="res://Assets/Sprites/Ground.png" id="1_1p5yg"]
[ext_resource type="Script" path="res://Game/Ground/ground.gd" id="1_2ygo5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aqsnr"]
size = Vector2(320, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bbi7o"]
size = Vector2(23, 192)

[node name="Ground" type="StaticBody2D"]
position = Vector2(160, 180)
collision_layer = 2
collision_mask = 0
script = ExtResource("1_2ygo5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_1p5yg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_aqsnr")

[node name="RightArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArea"]
position = Vector2(148, -84)
shape = SubResource("RectangleShape2D_bbi7o")

[node name="LeftArea" type="Area2D" parent="."]
position = Vector2(-296, 0)
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArea"]
position = Vector2(148, -84)
shape = SubResource("RectangleShape2D_bbi7o")

[node name="RightMarker" type="Marker2D" parent="."]
position = Vector2(320, 0)

[node name="LeftMarker" type="Marker2D" parent="."]
position = Vector2(-320, 0)

[connection signal="area_entered" from="RightArea" to="." method="_on_right_area_entered"]
[connection signal="area_entered" from="LeftArea" to="." method="_on_left_area_entered"]
